# sibsau-pallada-timetable-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  group_parser.py  professor_parser.py  search_results.py
tests/: __init__.py
tests/proxies/: group_13501.json  group_30e91083.json  professor_3099.json  professor_55b0dc02.json  search_results.json
